--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@heroui/button": "^2.2.24",
     "@heroui/form": "^2.1.24",
     "@heroui/input": "^2.4.25",
@@ -31,6 +32,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.23.12",
     "next": "15.4.6",
+    "next-auth": "^5.0.0-beta.29",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "yup": "^1.7.0"
