--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@heroui/toast": "^2.0.14",
     "@next/env": "^15.4.6",
     "@prisma/client": "^6.14.0",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "classnames": "^2.5.1",
     "formik": "^2.4.6",
     "framer-motion": "^12.23.12",
@@ -35,11 +35,14 @@
     "next-auth": "^5.0.0-beta.29",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "yup": "^1.7.0"
+    "yup": "^1.7.0",
+    "zod": "^4.1.5",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
